--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "End-to-end web project covering the full development lifecycle.",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run services:up  && npm run wait-for-postgres && npm run migration:up && next dev",
+    "dev": "npm run services:up  && npm run services:wait:database && npm run migration:up && next dev",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "services:down": "docker compose -f infra/compose.yaml down",
+    "services:wait:database": "node infra/scripts/wait-for-postgres.js",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
     "lint:eslint:check": "next lint --dir .",
@@ -15,7 +16,6 @@
     "test:watch": "jest --watchAll --runInBand",
     "migration:create": "node-pg-migrate -m infra/migrations create",
     "migration:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
-    "wait-for-postgres": "node infra/scripts/wait-for-postgres.js",
     "prepare": "husky",
     "commit": "cz"
   },
@@ -43,7 +43,7 @@
     "eslint-plugin-jest": "28.8.0",
     "husky": "9.1.4",
     "jest": "29.7.0",
-    "prettier": "3.8.1"
+    "prettier": "3.3.3"
   },
   "config": {
     "commitizen": {
